2002-08-21  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* Defaults.py (SMTPAUTH_USERNAME, SMTPAUTH_PASSWORD): New
	variables.
	
	* SMTP.py (Connection.__connect): Add support for SMTP
	authentication.
	
	* Defaults.py (MAX_AUTORESPONSES_PER_DAY, RESPONSE_DIR): New
	variables.

2002-08-08  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* MessageLogger.py: New module.

	* Defaults.py (LOGFILE_OUTGOING): New variable.

2002-08-07  Tim Legant  <tim@catseye.net>

	* FilterParser.py (_FilterFile): New class to hold per-file data.

	(FilterParser.__loadedby): New function to determine if file to be
	included has already been included (to prevent infinite loops).

	(FilterParser.read): Added code to detect file include loops and
	prevent infinite loops.

	(FilterParser.__init__): Moved Parser initialization to
	constructor.

	(FilterParser.__pushfile, FilterParser.__popfile,
	FilterParser.__file): New methods.

	(FilterParser.read, FilterParser.__readrule,
	FilterParser.__parseargs): Re-coded so recursive calls work.

	(FilterParser.__parse): Re-coded so recursive calls work.  The
	nested exception is now propagated all the way out.

	(FilterParser.__includefilter): New function.  Recursively loads
	and parses included filter files.

2002-08-07  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* FilterParser.py (FilterParser.__findvarsub): Query the Defaults
	vardict when checking the namespace.
	
2002-08-06  Tim Legant  <tim@catseye.net>

	* FilterParser.py: Added macro substitution and variable
	interpolation.

	(Macro): New class.

	(FilterParser.__parsemacro, FilterParser.__expandmacros,
	FilterParser.__findvarsub, FilterParser.__interpolatevars): New
	functions.

	(FilterParser.firstmatch): Added '-optional' argument to all rules
	that access files.

2002-07-29  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Defaults.py (X_TMDA_IN_SUBJECT, ADDED_HEADERS_SERVER): New
	variables.
