@@ -1,3 +1,10 @@
+2002-08-22  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>
+
+	* SMTP.py (Connection.__connect): Add support for SSL.
+
+	* Defaults.py (SMTPSSL, SMTPSSL_KEYFILE, SMTPSSL_CERTFILE): New
+	variables.
+	
 2002-08-21  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>
 
 	* Defaults.py (SMTPAUTH_USERNAME, SMTPAUTH_PASSWORD): New
